Regression: Graph Editor: broken f-curve line #120950

Closed
opened 2024-04-22 21:40:50 +02:00 by Serge Lyatin · 2 comments

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 4.1, 4.2
Worked: 3.6.10

Short description of error
Normalized representation with some view zoom + squeeze combination can break f-curve line

Exact steps for others to reproduce the error
Open attached file and look at f-curve

**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 4.1, 4.2 Worked: 3.6.10 **Short description of error** Normalized representation with some view zoom + squeeze combination can break f-curve line **Exact steps for others to reproduce the error** Open attached file and look at f-curve
Serge Lyatin added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-22 21:40:50 +02:00
Iliya Katushenock added the
Interest
Animation & Rigging
label 2024-04-22 22:08:20 +02:00
Iliya Katushenock changed title from Graph Editor: broken f-curve line to Regression: Graph Editor: broken f-curve line 2024-04-22 22:08:27 +02:00
Member

Hi, thanks for the report. Can confirm

Hi, thanks for the report. Can confirm
Christoph Lendenfeld self-assigned this 2024-04-25 10:23:43 +02:00

will have a look at this

will have a look at this
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-25 11:51:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120950
No description provided.