Fix #120950: Graph Editor FCurve line rendering

The issue was that the key bounds for determining if a key can be skipped
were initialized incorrectly.
The order of `rctf` is [xmin, xmax, ymin, ymax] but the values were given as
[x, y, x, y].
The correct order is [x, x, y, y]

Pull Request: https://projects.blender.org/blender/blender/pulls/126554